[package]
name = "quijine"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"

[dependencies]
log = "0.4.0"
bitflags = { version = "1.2.1" }

[dependencies.libquickjs-sys]
version = "0.7.0"
#path = "./libquickjs-sys"
#features = ["system"]
#default-features = false

[dev-dependencies]
rand = "0.7.3"
rand_xorshift = "0.2.0"

[workspace]
members = [
    #"libquickjs-sys",
]
