[package]
name = "quijine"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"

[dependencies]
log = "0.4"
bitflags = { version = "1.2" }
lazy_static = "1.4"
qjncore = { path = "./qjncore" }

[dev-dependencies]
env_logger = "0.8"
rand = "0.8"
rand_xorshift = "0.3"

[features]
debug_leak = []

[workspace]
members = [
    "qjncore",
    "serde_quijine",
    "jj",
]
