[package]
name = "quijine"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
license = "MIT/Apache-2.0"
keywords = ["javascript", "quickjs"]
readme = "README.md"
repository = "https://github.com/taskie/quijine"
categories = ["api-bindings"]
description = "High-level bindings between Rust and QuickJS."
edition = "2021"

[dependencies]
log = "0.4"
bitflags = { version = "1.2" }
lazy_static = "1.4"
quijine_core = { path = "./quijine_core" }

[dev-dependencies]
env_logger = "0.9"
maplit = "1.0.2"
rand = "0.8"
rand_xorshift = "0.3"

[features]
c_function_list = []
debug_leak = []

[workspace]
members = [
    "quijine_core",
    "quijine_jj",
    "serde_quijine",
]
