[package]
name = "jj"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0"
env_logger = "0.8"
log = "0.4"
quijine = { path = "../" }
serde_quijine = { path = "../serde_quijine" }
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "1.0.5"
