[package]
name = "qjncore"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"
publish = false

[dependencies]
log = "0.4.0"
bitflags = { version = "1.2.1" }
lazy_static = "1.4.0"

[dependencies.libquickjs-sys]
version = "0.9.0"
#path = "./libquickjs-sys"
#features = ["system"]
#default-features = false

[dev-dependencies]
env_logger = "0.7.1"
rand = "0.7.3"
rand_xorshift = "0.2.0"
