[package]
name = "quijine-examples"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quijine = { path = "../" }
log = "0.4.0"
env_logger = "0.7.1"
rand = "0.7.3"
rand_xorshift = "0.2.0"
lazy_static = "1.4.0"
