[package]
name = "quijine_core"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
edition = "2018"
publish = false

[dependencies]
log = "0.4"
bitflags = { version = "1.2" }
lazy_static = "1.4"

[dependencies.libquickjs-sys]
version = "0.9"
#path = "./libquickjs-sys"
#features = ["system"]
#default-features = false

[dev-dependencies]
env_logger = "0.8"
rand = "0.8"
rand_xorshift = "0.3"
