[package]
name = "quijine_core"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
license = "MIT/Apache-2.0"
keywords = ["javascript", "quickjs"]
readme = "README.md"
repository = "https://github.com/taskie/quijine/tree/main/quijine_core"
categories = ["api-bindings"]
description = "Low-level bindings between Rust and QuickJS."
edition = "2018"

[dependencies]
log = "0.4"
bitflags = { version = "1.2" }
lazy_static = "1.4"

[dependencies.libquickjs-sys]
version = "0.10"
#path = "./libquickjs-sys"
#features = ["system"]
#default-features = false

[dev-dependencies]
env_logger = "0.9"
rand = "0.8"
rand_xorshift = "0.3"
