[package]
name = "quijine_jj"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
license = "MIT/Apache-2.0"
edition = "2018"
publish = false

[[bin]]
name = "jj"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
atty = "0.2"
colored_json = "2.1"
env_logger = "0.8"
log = "0.4"
quijine = { path = "../" }
serde = "1.0"
serde_quijine = { path = "../serde_quijine" }
serde_json = { version = "1.0", features = ["preserve_order"] }
structopt = "0.3"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "1.0.5"
