[package]
name = "quijine_jj"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
license = "MIT/Apache-2.0"
keywords = ["json", "javascript", "quickjs"]
readme = "README.md"
repository = "https://github.com/taskie/quijine/tree/main/quijine_jj"
categories = ["command-line-utilities"]
description = "Genuine JavaScript Object Notation processor."
edition = "2021"

[[bin]]
name = "jj"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
atty = "0.2.14"
colored_json = "3.1.0"
env_logger = "0.10.0"
log = "0.4.17"
quijine = { path = "../" }
serde = "1.0.158"
serde_quijine = { path = "../serde_quijine" }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
thiserror = "1.0.40"
clap = { version = "4.1.13", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.10"
