[package]
name = "serde_quijine"
version = "0.1.0"
authors = ["taskie <t@skie.jp>"]
license = "MIT/Apache-2.0"
keywords = ["javascript", "quickjs", "serde"]
readme = "README.md"
repository = "https://github.com/taskie/quijine/tree/main/serde_quijine"
categories = ["encoding"]
description = "(De)serialization library of QuickJS values."
edition = "2021"
rust-version = "1.65"

[dependencies]
log = "0.4.17"
quijine = { path = "../" }
serde = "1.0.158"

[dev-dependencies]
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
